--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -32,25 +32,24 @@
         <div class="input-group">
             <label for="unit">Select Unit:</label>
             <select id="unit">
-                <option value="bi">Bigha</option>
-                <option value="ka">Kattha</option>
-                <option value="dh">Dhur</option>
+                <option value="bi">Bigha बिघा</option>
+                <option value="ka">Kattha कठ्ठा</option>
+                <option value="dh">Dhur धुर</option>
                 <option value="bi-ka-dh">Bigha-Kattha-Dhur</option>
-                <option value="kh">Khetmuri</option>
-                <option value="ma">Matomuri</option>
-                <option value="kh-ma">Khetmuri-Matomuri</option>
-                <option value="ro">Ropani</option>
-                <option value="aa">Aana</option>
-                <option value="pa">Paisa</option>
-                <option value="da">Dam</option>
+                <option value="kh">Khetmuri खेतमुरी</option>
+                <option value="ma">Matomuri माटाेमुरी</option>
+                <option value="ro">Ropani राेपनी</option>
+                <option value="aa">Aana आना</option>
+                <option value="pa">Paisa पैसा</option>
+                <option value="da">Dam दाम</option>
                 <option value="ro-aa-pa-da">Ropani-Aana-Paisa-Dam</option>
-                <option value="acre">Acre</option>
-                <option value="hectare">Hectare</option>
-                <option value="sqm">Square Meter</option>
-                <option value="sqkm">Square Kilometer</option>
-                <option value="sqmile">Square Mile</option>
-                <option value="sqyard">Square Yard</option>
-                <option value="sqft">Square Feet</option>
+                <option value="acre">Acre एकड</option>
+                <option value="hectare">Hectare हेक्टर</option>
+                <option value="sqm">Square Meter वर्ग मिटर</option>
+                <option value="sqkm">Square Kilometer वर्ग किलाेमिटर</option>
+                <option value="sqmile">Square Mile वर्ग माइल</option>
+                <option value="sqyard">Square Yard वर्ग यार्ड</option>
+                <option value="sqft">Square Feet वर्ग फिट</option>
             </select>
         </div>
 
