--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -11,6 +11,9 @@
         .input-group { margin-bottom: 10px; }
         .results { white-space: pre-wrap; }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <div class="container">
