--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-7909865065068819">
      <meta name="description" content="Easily convert land area units like Ropani, Aana, Dhur, Kattha, and Bigha to square meters, acres, and hectares with this accurate Nepali Land Area Converter tool.">
      <title>Land Area Converter - Convert Ropani, Aana, Dhur to Sq. Meters, Bigha, all</title>
   <style>
