--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -174,6 +174,6 @@
         }
     </script>
 
-    <a href="/index.html" class="back-button">Back to Home</a>
+    <a href="#" class="back-button">Back to Home</a>
 </body>
 </html>
