--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -174,6 +174,7 @@
         }
     </script>
 
-    <a href="#" class="back-button">Back to Home</a>
+    <a href="#" onclick="parent.resetPage(); return false;" class="back-button">Back to Home</a>
+
 </body>
 </html>
