--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -81,11 +81,11 @@
             "Dam": 3408.0224,
             "Acre": 1.6735,
             "Hectare": 0.67726,
-            "Square Meter": 6772.630,
-            "Square Kilometer": 0.00677263,
-            "Square Mile": 0.002614927062,
-            "Square Yard": 8099.998067,
-            "Square Feet": 72900.589,
+            "Square Meter": 6772.6287,
+            "Square Kilometer": 0.0067726287,
+            "Square Mile": 0.00261492656008,
+            "Square Yard": 8099.99651249,
+            "Square Feet": 72899.9686124,
         };
 
         const unit_mapping = {
