--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -79,7 +79,7 @@
             "Aana": 213.0014,
             "Paisa": 852.0056,
             "Dam": 3408.0224,
-            "Acre": 1.6735,
+            "Acre": 1.67355299845,
             "Hectare": 0.67726,
             "Square Meter": 6772.6287,
             "Square Kilometer": 0.0067726287,
