--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -73,12 +73,12 @@
             "Bigha": 1,
             "Kattha": 20,
             "Dhur": 400,
-            "Khetmuri": 0.5325,
-            "Matomuri": 53.25,
-            "Ropani": 13.31259,
-            "Aana": 213.0014,
-            "Paisa": 852.0056,
-            "Dam": 3408.0224,
+            "Khetmuri": 0.53250548,
+            "Matomuri": 53.250548,
+            "Ropani": 13.312637,
+            "Aana": 213.002192,
+            "Paisa": 852.008768,
+            "Dam": 3408.035072,
             "Acre": 1.67355299845,
             "Hectare": 0.67726,
             "Square Meter": 6772.6287,
