--- a/assets/apps/caputok/privacy_policy/index.html
+++ b/assets/apps/caputok/privacy_policy/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <h1>Privacy Policy for Caputok</h1>
-    <p><strong>Effective Date:</strong> [Date of App Release]</p>
+    <p><strong>Effective Date:</strong> February 08 2025</p>
 
     <section>
         <h2>1. Data Collection</h2>
