--- a/assets/apps/caputok/terms_of_use/index.html
+++ b/assets/apps/caputok/terms_of_use/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <h1>Terms of Use for Caputok</h1>
-    <p><strong>Effective Date:</strong> [Date of App Release]</p>
+    <p><strong>Effective Date:</strong> February 08 2025</p>
 
     <section>
         <h2>1. General Use</h2>
