--- a/assets/apps/caputok/userguide.html
+++ b/assets/apps/caputok/userguide.html
@@ -44,43 +44,43 @@
         <h1>User Guide</h1>
         <ol>
             <li>Go to your profile and click on <b>Menu</b><br>
-                <img src="/image001.jpg" width="278" height="315"></li>
+                <img src="assets/apps/caputok/image001.jpg" width="278" height="315"></li>
             <li>Go to <b>Settings and Privacy</b><br>
-                <img src="/image002.png" width="279" height="447"></li>
+                <img src="assets/apps/caputok/image002.png" width="279" height="447"></li>
             <li>Go to <b>Account</b><br>
-                <img src="/image003.jpg" width="279" height="291"></li>
+                <img src="assets/apps/caputok/image003.jpg" width="279" height="291"></li>
             <li>Download your data<br>
-                <img src="/image004.jpg" width="279" height="338"></li>
+                <img src="assets/apps/caputok/image004.jpg" width="279" height="338"></li>
             <li>Click on <b>All data</b><br>
-                <img src="/image005.jpg" width="279" height="323"></li>
+                <img src="assets/apps/caputok/image005.jpg" width="279" height="323"></li>
             <li>Select <b>Custom</b> and <b>Done</b><br>
-                <img src="/image006.jpg" width="279" height="395"></li>
+                <img src="assets/apps/caputok/image006.jpg" width="279" height="395"></li>
             <li>Select <b>Profile and posts</b> and click <b>Done</b><br>
-                <img src="/image007.jpg" width="279" height="393"></li>
+                <img src="assets/apps/caputok/image007.jpg" width="279" height="393"></li>
             <li>Click on <b>Request Data</b><br>
-                <img src="/image008.jpg" width="279" height="406"></li>
+                <img src="assets/apps/caputok/image008.jpg" width="279" height="406"></li>
             <li>Wait for the download to be ready, then click on <b>Download</b><br>
-                <img src="/image009.jpg" width="279" height="244"></li>
+                <img src="assets/apps/caputok/image009.jpg" width="279" height="244"></li>
             <li>Click on <b>Send code</b> and receive the code in WhatsApp or email.<br>
-                <img src="/image010.jpg" width="279" height="278"></li>
+                <img src="assets/apps/caputok/image010.jpg" width="279" height="278"></li>
             <li>Enter the code and click <b>Continue</b><br>
-                <img src="/image011.jpg" width="279" height="365"></li>
+                <img src="assets/apps/caputok/image011.jpg" width="279" height="365"></li>
             <li>Download will start automatically in the default browser. Click <b>Open</b> when finished.<br>
-                <img src="/image012.jpg" width="279" height="353"></li>
+                <img src="assets/apps/caputok/image012.jpg" width="279" height="353"></li>
             <li>Extract the zip file.<br>
-                <img src="/image013.jpg" width="279" height="460"></li>
+                <img src="assets/apps/caputok/image013.jpg" width="279" height="460"></li>
             <li>Open the <b>Caputok App</b> and click on <b>Follower List</b><br>
-                <img src="/image014.jpg" width="279" height="189"></li>
+                <img src="assets/apps/caputok/image014.jpg" width="279" height="189"></li>
             <li>Select <b>Follower.txt</b> from file manager.<br>
-                <img src="/image015.jpg" width="279" height="442"></li>
+                <img src="assets/apps/caputok/image015.jpg" width="279" height="442"></li>
             <li>Click on <b>Following List</b><br>
-                <img src="/image016.jpg" width="279" height="163"></li>
+                <img src="assets/apps/caputok/image016.jpg" width="279" height="163"></li>
             <li>Select <b>Following.txt</b> from the file.<br>
-                <img src="/image017.jpg" width="279" height="340"></li>
+                <img src="assets/apps/caputok/image017.jpg" width="279" height="340"></li>
             <li>Click on <b>Analyze</b><br>
-                <img src="/image018.jpg" width="279" height="447"></li>
+                <img src="assets/apps/caputok/image018.jpg" width="279" height="447"></li>
             <li>All non-followers will be displayed.<br>
-                <img src="/image019.jpg" width="279" height="507"></li>
+                <img src="assets/apps/caputok/image019.jpg" width="279" height="507"></li>
             <li>Click on each user to check who unfollowed you.</li>
         </ol>
         <div class="footer">Thank you.</div>
