--- a/assets/apps/caputok/userguide.html
+++ b/assets/apps/caputok/userguide.html
@@ -46,29 +46,29 @@
             <li>Go to your profile and click on <b>Menu</b><br>
                 <img src="assets/apps/caputok/image001.jpg" width="278" height="315"></li>
             <li>Go to <b>Settings and Privacy</b><br>
-                <img src="assets/apps/caputok/image002.png" width="279" height="447"></li>
+                <img src="/image002.png" width="279" height="447"></li>
             <li>Go to <b>Account</b><br>
-                <img src="assets/apps/caputok/image003.jpg" width="279" height="291"></li>
+                <img src="/image003.jpg" width="279" height="291"></li>
             <li>Download your data<br>
-                <img src="assets/apps/caputok/image004.jpg" width="279" height="338"></li>
+                <img src="/image004.jpg" width="279" height="338"></li>
             <li>Click on <b>All data</b><br>
                 <img src="assets/apps/caputok/image005.jpg" width="279" height="323"></li>
             <li>Select <b>Custom</b> and <b>Done</b><br>
-                <img src="assets/apps/caputok/image006.jpg" width="279" height="395"></li>
+                <img src="/image006.jpg" width="279" height="395"></li>
             <li>Select <b>Profile and posts</b> and click <b>Done</b><br>
-                <img src="assets/apps/caputok/image007.jpg" width="279" height="393"></li>
+                <img src="/image007.jpg" width="279" height="393"></li>
             <li>Click on <b>Request Data</b><br>
-                <img src="assets/apps/caputok/image008.jpg" width="279" height="406"></li>
+                <img src="image008.jpg" width="279" height="406"></li>
             <li>Wait for the download to be ready, then click on <b>Download</b><br>
-                <img src="assets/apps/caputok/image009.jpg" width="279" height="244"></li>
+                <img src="image009.jpg" width="279" height="244"></li>
             <li>Click on <b>Send code</b> and receive the code in WhatsApp or email.<br>
-                <img src="assets/apps/caputok/image010.jpg" width="279" height="278"></li>
+                <img src="/image010.jpg" width="279" height="278"></li>
             <li>Enter the code and click <b>Continue</b><br>
-                <img src="assets/apps/caputok/image011.jpg" width="279" height="365"></li>
+                <img src="image011.jpg" width="279" height="365"></li>
             <li>Download will start automatically in the default browser. Click <b>Open</b> when finished.<br>
-                <img src="assets/apps/caputok/image012.jpg" width="279" height="353"></li>
+                <img src="/image012.jpg" width="279" height="353"></li>
             <li>Extract the zip file.<br>
-                <img src="assets/apps/caputok/image013.jpg" width="279" height="460"></li>
+                <img src="/image013.jpg" width="279" height="460"></li>
             <li>Open the <b>Caputok App</b> and click on <b>Follower List</b><br>
                 <img src="assets/apps/caputok/image014.jpg" width="279" height="189"></li>
             <li>Select <b>Follower.txt</b> from file manager.<br>
