--- a/assets/apps/caputok/userguide.html
+++ b/assets/apps/caputok/userguide.html
@@ -72,7 +72,7 @@
             <li>Open the <b>Caputok App</b> and click on <b>Follower List</b><br>
                 <img src="image014.jpg" width="279" height="189"></li>
             <li>Select <b>Follower.txt</b> from file manager.<br>
-                <img src="image015.jpg" width="279" height="442"></li>
+                <img src="image015~2.jpg" width="279" height="442"></li>
             <li>Click on <b>Following List</b><br>
                 <img src="image016.jpg" width="279" height="163"></li>
             <li>Select <b>Following.txt</b> from the file.<br>
