--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                 <li><button id="areaCalculatorBtn" title="Convert land area units in Nepal">Land Area Converter- Convert Ropani, Aana, Dhur</button></li>
 		<li><button id="dateConverterBtn">Date Converter (Hamro Patro)</button></li>
 		<li><button id="nepaliCalendarBtn">Nepali Calendar (Hamro Patro)</button></li>
+		<li><button id="visualizeTimeSeriesBtn">Create animated time-series Chart</button></li>
+
             </ul>
         </div>
 
@@ -282,6 +284,15 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <iframe id="areaCalculatorIframe" src="land-area-converter/" title="Nepali Land Area Converter - Convert Ropani, Aana, Dhur" style="width:100%; height:400px; border:none;"></iframe>
     </div>
 </div>
+
+
+    document.getElementById("visualizeTimeSeriesBtn").addEventListener("click", function() {
+        window.location.href = "time-series-cahrt.html";
+    });
+
+
+</script>
+
 
     <script src="scripts.js"></script>
    <button id="backToTop" class="floating-button">↑</button>
