--- a/assets/time-series-cahrt.html
+++ b/assets/time-series-cahrt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Visualize Time Series Data</title>
     <style>
         body, html {
             margin: 0;
@@ -49,7 +49,7 @@
     <div class="header"></div>
     <button class="back-btn" onclick="history.back()">← Back</button>
 
-    <iframe src="https://chart-visualize.niraula300.workers.dev/" title=""></iframe>
+    <iframe src="https://chart-visualize.niraula300.workers.dev/" title="Data Visualization"></iframe>
 
     <footer>
         <p>© 2025 Krishna Niraula. All rights reserved.</p>
