--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </li>
             <li><a href="#contact" class="no-deco">Contact</a></li>
             <li><a href="#contact" class="no-deco">About</a></li>
+		<li><a href="assets/time-series-cahrt.html" class="no-deco">Animated Chart</li>
         </ul>
     </div>
 </nav>
