--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="nav-right">
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <ul id="menu">
-            
+            <li><a href="#" onclick="loadPage('assets/time-series-cahrt.html'); return false;">Animate Time-series Data</a></li>
             <li class="dropdown">Apps
                 <ul class="dropdown-content">
                     <li class="dropdown">Caputok
