--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="nav-right">
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <ul id="menu">
-            <li><a href="#" onclick="loadPage('assets/time-series-cahrt.html'); return false;">Animate Time-series Data</a></li>
+            <li><a href="#" onclick="loadPage('/time-series-chart-animation/'); class="no-deco";">Animate Time-series Data</a></li>
             <li class="dropdown">Apps
                 <ul class="dropdown-content">
                     <li class="dropdown">Caputok
@@ -276,7 +276,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 
 <script>
     document.getElementById("visualizeTimeSeriesBtn").addEventListener("click", function() {
-        window.location.href = "assets/time-series-cahrt.html";
+        window.location.href = "/time-series-chart-animation/";
     });
 
 </script>
