--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -23,7 +23,7 @@
         }
         .back-btn {
             position: absolute;
-            top: 10px;
+            bottom: 10px;
             left: 10px;
             background: #007bff;
             color: white;
