--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -23,7 +23,7 @@
         }
         .back-btn {
             position: absolute;
-            bottom: 10px;
+            bottom: 30px;
             left: 10px;
             background: #007bff;
             color: white;
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="header"></div>
-    <button class="back-btn" onclick="history.back()">← Back</button>
+    <button class="back-btn" onclick="history.back()">Back to Homepage</button>
 
     <iframe src="https://chart-visualize.niraula300.workers.dev/" title="Data Visualization"></iframe>
 
