--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -34,7 +34,7 @@
     <canvas id="myChart"></canvas>
   </div>
   <button onclick="updateChart()" style="display: block; margin: 0 auto;">Update Chart</button>
-
+<button class="back-btn" onclick="history.back()">Back to Homepage</button>
   <script>
     let currentChart = null;
     let columns = 3;
