--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -2,7 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Data Visualization</title>
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <title>Visualize Your Time-series Data</title>
+    <meta name="description" content="Load your time series data in excel or csv format and visualize animation on our website.">
+    <meta name="keywords" content="charts, data, visualization, graphs, analysis, time-series, animation, excel, csv">
+    <meta name="author" content="Your Website Name">
+	
+ 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gifshot/0.4.5/gifshot.min.js"></script>
   <script src="https://unpkg.com/gifshot@0.4.5/dist/gifshot.min.js"></script> <!-- Fallback CDN -->
@@ -10,11 +17,40 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
+	
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
      crossorigin="anonymous"></script>
  
 </head>
 <body>
+ <nav>
+    <div class="nav-left">
+        <a href="#" onclick="window.location.reload();" class="no-dec">My Space 😉</a>
+    </div>
+
+    <div class="nav-right">
+        <div class="menu-icon" onclick="toggleMenu()">☰</div>
+        <ul id="menu">
+            <li><a href="/time-series-chart-animation/" class="no-deco">Animate Time-series Data</a></li>
+            <li class="dropdown">Apps
+                <ul class="dropdown-content">
+                    <li class="dropdown">Caputok
+                        <ul class="dropdown-content">
+                            <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">Play Store</a></li>
+                            <li><a href="#">App Store</a></li>
+                            <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
+                            <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#contact" class="no-deco">Contact</a></li>
+            <li><a href="#contact" class="no-deco">About</a></li>
+        </ul>
+    </div>
+</nav>
+
+	
   <div id="controls">
     <button onclick="exportCSV()">Export Table Data (CSV)</button>
     <button onclick="exportChart()">Export Chart (GIF)</button>
@@ -733,5 +769,70 @@ function exportChart() {
 
     initializeTable();
   </script>
+
+<footer>
+   <div class="footer-container">
+        <!-- Tools -->
+        <div class="footer-column">
+            <h3>Tools</h3>
+            <ul>
+                <li><button id="areaCalculatorBtn" title="Convert land area units in Nepal">Land Area Converter- Convert Ropani, Aana, Dhur</button></li>
+		<li><button id="dateConverterBtn">Date Converter (Hamro Patro)</button></li>
+		<li><button id="nepaliCalendarBtn">Nepali Calendar (Hamro Patro)</button></li>
+		
+
+            </ul>
+        </div>
+
+        <!-- Social Media Column -->
+        <div class="footer-column">
+            <h3>Social Media</h3>
+            <ul>
+                <li><a href="https://youtube.com/@sankhatro?si=fwaJiabYnMIfFk3q" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i>YouTube</a></li>
+                <li><a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x"></i>Krishna's X</a></li>
+
+                <!-- LinkedIn Icon -->
+                <li><a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="fab fa-linkedin-in"></i>Krishna on LinkedIn</a></li>
+            </ul>
+        </div>
+
+        <!-- About Column -->
+        <div class="footer-column">
+            <h3>About</h3>
+            <ul>
+                <p>Email: <a id="contact-email" href="mailto:mail@krishnaniraula.com.np">Email Krishna</a></p>
+                <li><a href="/assets/pp.html">Privacy Policy</a></li>
+                <li><a href="/assets/tfu.html">Terms of Use</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Copyright Section -->
+    <div class="footer-copyright">
+        <p>© 2025 Krishna Niraula. All rights reserved.</p>
+    </div>
+</footer>
+	
+<div id="nepaliCalendarPopup" class="popup" style="display:none;">
+    <div class="popup-content">
+        <span class="close">×</span>
+        <iframe id="nepaliCalendarIframe" src="about:blank" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" style="border:none; overflow:hidden; width:800px; height:840px;" allowtransparency="true"></iframe>
+    </div>
+</div>
+	
+<div id="dateConverterPopup" class="popup" style="display:none;">
+    <div class="popup-content">
+        <span class="close">×</span>
+        <iframe id="dateConverterIframe" src="about:blank" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" style="border:none; overflow:hidden; width:350px; height:150px;" allowtransparency="true"></iframe>
+    </div>
+</div>
+	
+<div id="areaCalculatorPopup" class="popup" style="display:none;">
+    <div class="popup-content">
+        <span class="close">×</span>
+        <iframe id="areaCalculatorIframe" src="land-area-converter/" title="Nepali Land Area Converter - Convert Ropani, Aana, Dhur" style="width:100%; height:400px; border:none;"></iframe>
+    </div>
+</div>
+	<script src="/script.js"></script>
 </body>
 </html>
