--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -25,28 +25,7 @@
 <body>
  <nav>
     <div class="nav-left">
-        <a href="#" onclick="window.location.reload();" class="no-dec">My Space 😉</a>
-    </div>
-
-    <div class="nav-right">
-        <div class="menu-icon" onclick="toggleMenu()">☰</div>
-        <ul id="menu">
-            <li><a href="/time-series-chart-animation/" class="no-deco">Animate Time-series Data</a></li>
-            <li class="dropdown">Apps
-                <ul class="dropdown-content">
-                    <li class="dropdown">Caputok
-                        <ul class="dropdown-content">
-                            <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">Play Store</a></li>
-                            <li><a href="#">App Store</a></li>
-                            <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
-                            <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li><a href="#contact" class="no-deco">Contact</a></li>
-            <li><a href="#contact" class="no-deco">About</a></li>
-        </ul>
+        <a href="#" onclick="window.location.reload();" class="no-dec">Homepage</a>
     </div>
 </nav>
 
@@ -833,6 +812,6 @@ function exportChart() {
         <iframe id="areaCalculatorIframe" src="land-area-converter/" title="Nepali Land Area Converter - Convert Ropani, Aana, Dhur" style="width:100%; height:400px; border:none;"></iframe>
     </div>
 </div>
-	<script src="/script.js"></script>
+	<script src="/scripts.js"></script>
 </body>
 </html>
