--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <ul class="dropdown-content">
                             <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">Play Store</a></li>
                             <li><a href="#">App Store</a></li>
-                            <li><a href="#" onclick="loadPage('assets/apps/caputok/privacy_policy/'); return false;">Privacy Policy</a></li>
-                            <li><a href="#" onclick="loadPage('assets/apps/caputok/terms_of_use/'); return false;">Terms of Use</a></li>
+                            <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
+                            <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
                         </ul>
                     </li>
                 </ul>
