--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -25,7 +25,7 @@
 <body>
  <nav>
     <div class="nav-left">
-        <a href="#" onclick="window.location.reload();" class="no-dec">Homepage</a>
+        <a href="/index.html" class="no-dec">Homepage</a>
     </div>
 </nav>
 
