--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -17,7 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
-	
+	<link rel="stylesheet" href="/styles.css">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
      crossorigin="anonymous"></script>
  
@@ -781,6 +781,6 @@ function exportChart() {
         <p>© 2025 Krishna Niraula. All rights reserved.</p>
     </div>
 </footer>
-	
+	<script src="/scripts.js"></script>
 </body>
 </html>
