--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <h3>About</h3>
             <ul>
                 <p>Email: <a id="contact-email" href="mailto:mail@krishnaniraula.com.np">Email Krishna</a></p>
-                <li><a href="/assets/pp.html">Privacy Policy</a></li>
-                <li><a href="/assets/tfu.html">Terms of Use</a></li>
+                <li><a href="/assets/website-privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="/assets/website-terms-of-use.html">Terms of Use</a></li>
             </ul>
         </div>
     </div>
