--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -28,7 +28,7 @@
         <a href="/index.html" class="no-dec">Homepage</a>
     </div>
 </nav>
-
+<h1>Visualize Your Time-series Data</h1>
 	
   <div id="controls">
     <button onclick="exportCSV()">Export Table Data (CSV)</button>
