--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 
 	  <main 
         		<div class="intro">
+<h1>Welcome to Krishna's Website</h1>
        			 <img src="assets/images/welcome-banner.jpeg" alt="Main Photo">
-            			<p>Welcome to Krishna's website. Here you will find various resources and information.</p>
+            			<p>Here you will find various resources and information.</p>
      			   </div>
 		  
    
