--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -7,7 +7,7 @@
 	 <title>Visualize Your Time-series Data</title>
     <meta name="description" content="Load your time series data in excel or csv format and visualize animation on our website.">
     <meta name="keywords" content="charts, data, visualization, graphs, analysis, time-series, animation, excel, csv">
-    <meta name="author" content="Your Website Name">
+    <meta name="author" content="krishnaniraula.com.np">
 	
  
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
