--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -4,6 +4,12 @@
 <head>
  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ <meta http-equiv="content-language" content="en">
+    <link rel="alternate" hreflang="en" href="https://krishnaniraula.com.np/time-series-chart-animation/">
+    <link rel="alternate" hreflang="en-np" href="https://krishnaniraula.com.np/time-series-chart-animation/">
+    <link rel="alternate" hreflang="x-default" href="https://krishnaniraula.com.np/time-series-chart-animation/">
+
 	 <title>Visualize Your Time-series Data</title>
     <meta name="description" content="Load your time series data in excel or csv format and visualize animation on our website.">
     <meta name="keywords" content="charts, data, visualization, graphs, analysis, time-series, animation, excel, csv">
