--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-adsense-account" content="ca-pub-7909865065068819">
-    
+     <title>Welcome to Krishna's Website - Data Visualization & Tools</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
 <link rel="manifest" href="/manifest.json">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
