--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -485,7 +485,7 @@ function updateChart(isExporting = false) {
             animation: { duration: 0 },
             plugins: {
                 legend: {
-                    position: 'bottom',
+                    position: 'right',
                     labels: {
                         generateLabels: function(chart) {
                             const labels = Chart.defaults.plugins.legend.labels.generateLabels(chart);
