--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -38,7 +38,7 @@
 	
   <div id="controls">
     <button onclick="exportCSV()">Export Table Data (CSV)</button>
-    <button onclick="exportChart()">Export Chart (GIF)</button>
+     
     <label>Animation Speed (sec): <input type="number" id="animationSpeed" value="1" min="0.1" step="0.1"></label>
     <button onclick="document.getElementById('fileInput').click()">Import CSV/Excel</button>
     <input type="file" id="fileInput" style="display: none;" accept=".csv,.xlsx" onchange="handleFileUpload(event)">
@@ -53,9 +53,11 @@
 
   <div id="chartContainer">
     <canvas id="myChart"></canvas>
-  </div>
-  <button onclick="updateChart()" style="display: block; margin: 0 auto;">Update Chart</button>
+	<button id="fullscreenToggle" style="position: absolute; top: 10px; left: 10px; z-index: 10;">Toggle Full Screen</button>
+ 	<button onclick="updateChart()" style="display: block; margin: 0 auto;">Update Chart</button>
 
+  </div>
+  
   
 <footer>
    <div class="footer-container">
