--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -53,7 +53,7 @@
 
   <div id="chartContainer">
     <canvas id="myChart"></canvas>
-	<button id="fullscreenToggle" style="position: absolute; top: 10px; left: 10px; z-index: 10;">Toggle Full Screen</button>
+	<button id="fullscreenToggle" style="position: absolute; bottom: 10px; right: 10px; z-index: 10;">Toggle Full Screen</button>
  	<button onclick="updateChart()" style="display: block; margin: 0 auto;">Update Chart</button>
 
   </div>
