--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -53,7 +53,7 @@
 
   <div id="chartContainer">
     <canvas id="myChart"></canvas>
-	<button id="fullscreenToggle" style="position: absolute; top: 10px; left: 10px; z-index: 10; width: 24px; height: 24px; background-color: rgba(0, 0, 0, 0.5); border: 2px solid #fff; border-radius: 4px; cursor: pointer; transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='rgba(0, 0, 0, 0.8)'" onmouseout="this.style.backgroundColor='rgba(0, 0, 0, 0.5)'"></button>
+	<button id="fullscreenToggle" style="position: fixed; bottom: 10px; right: 10px; z-index: 10; width: 24px; height: 24px; background-color: rgba(0, 0, 0, 0.5); border: 2px solid #fff; border-radius: 4px; cursor: pointer; transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='rgba(0, 0, 0, 0.8)'" onmouseout="this.style.backgroundColor='rgba(0, 0, 0, 0.5)'"></button>
  	<button onclick="updateChart()" style="display: block; margin: 0 auto;">Update Chart</button>
 
   </div>
