--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="google-adsense-account" content="ca-pub-7909865065068819">
-     <title>Welcome to Krishna's Website - Data Visualization & Tools</title>
+    <meta name="google-adsense-account" content="ca-pub-7909865065068819">
+    <meta name="description" content="Useful tools, land area converter, time series data visualization, and more. Explore various utilities to simplify calculations and data analysis.">
+    <title>Welcome to Krishna's Website - Data Visualization & Tools</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
-<link rel="manifest" href="/manifest.json">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
+    <link rel="manifest" href="/manifest.json">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
      crossorigin="anonymous"></script>
-	
 </head>
 <body>
     <nav>
