--- a/apps/caputok/FAQ.html
+++ b/apps/caputok/FAQ.html
@@ -48,7 +48,7 @@
     <p>There are many apps in the Google Play Store and other app stores that claim to help users find TikTok unfollowers. However, most of them are actually designed for other social media platforms, not TikTok. Caputok is solely dedicated to helping TikTok users and making their task easier. It has nothing to do with other social media platforms.</p>
 
     <h2>How does it work?</h2>
-    <p>It works based on a simple logic. It analyzes the 'following' file and the 'followers' file, then identifies the usernames that are in the first file but not in the second. For a user guide, visit <a href="#">this link</a>.</p>
+    <p>It works based on a simple logic. It analyzes the 'following' file and the 'followers' file, then identifies the usernames that are in the first file but not in the second. For a user guide, visit <a href="https://krishnaniraula.com.np/assets/apps/caputok/userguide.html">this link</a>.</p>
 
     <h2>Do I really need it?</h2>
     <p>It is completely your choice. If you have more than 1,000 followings, care about keeping your following list clean, and do not have time to manually check each user, then this app is for you. Just try it and leave a review.</p>
