--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                     <ul class="portfolio-links">
                         <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
-			    <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
-			    <li><a href="#">App store link (Currently the app is available in Oppo App Market in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</a></li>
+			 <li><a href="apps/caputok/FAQ.html">FAQ~Caputok"</a></li>
+			 <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
+			 <li><a href="#">App store link (Currently the app is available in Oppo App Market in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</a></li>
                     </ul>
                 </div>
             </div>
