--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -67,6 +67,15 @@
         <p>The converter is designed to be as accurate as possible based on standard land measurement units used in Nepal.</p>
     </div>
 
+   <div class="faq-item">
+        <h3>Are there official area conversion rates in Nepal?</h3>
+        <p>The 7th Amendment of the <a href="https://dos.gov.np/download/download/collection-of-laws-related-to-land-survey-and-measurement/downloads" target="_blank">Jagga (Nap Jach) Ain, 2019</a> (Land Survey and Measurement Act, 1963) states that 10,000 square meters is equivalent to 1 hectare. The old measurements in Ropani and Bigaha will be converted according to this new standard. The previous land conversion method (you can read more about it <a href="https://giwmscdnone.gov.np/media/app/public/275/posts/1715242928_46.pdf" target="_blank">here</a>) defined 1 Bigaha as 270 ft x 270 ft, which equals 72,900 square feet. Similarly, 1 Ropani was defined as 74 ft x 74 ft, which equals 5,476 square feet. 
+
+        In the Ropani, Aana, Daam, Paisa system, 1 Ropani is equal to 16 Aana, 1 Aana equals 4 Daam, and 1 Daam equals 4 Paisa. Likewise, in the Bigaha, Kaththa, Dhur system, 1 Bigaha equals 20 Kaththa, 1 Kaththa equals 20 Dhur, and 1 Dhur equals 4 Kanawaa.
+
+        To know about the calculation method of the area of land, you can refer to the <a href="https://dos.gov.np/download/download/collection-of-laws-related-to-land-survey-and-measurement/downloads" target="_blank">official document</a>.</p>
+    </div>
+
     <div class="faq-item">
         <h3>What land units can I convert?</h3>
         <p>You can convert between Ropani, Aana, Paisa, Dam, Bigha, Kattha, Dhur, Square Meters, Acres, and more.</p>
@@ -80,3 +89,9 @@
     <a href="/land-area-converter/" class="back-button">Back to Converter</a>
 </body>
 </html>
+
+
+
+
+
+
