--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -80,17 +80,17 @@
             "Dhur": 400,
             "Khetmuri": 0.53250548,
             "Matomuri": 53.250548,
-            "Ropani": 13.312637,
-            "Aana": 213.002192,
-            "Paisa": 852.008768,
-            "Dam": 3408.035072,
-            "Acre": 1.67355299845,
-            "Hectare": 0.67726,
-            "Square Meter": 6772.6287,
-            "Square Kilometer": 0.0067726287,
-            "Square Mile": 0.00261492656008,
-            "Square Yard": 8099.99651249,
-            "Square Feet": 72899.9686124,
+            "Ropani": 13.31263696128,
+            "Aana": 213.00219138,
+            "Paisa": 852.008765522,
+            "Dam": 3408.03506209,
+            "Acre": 1.673553718377,
+            "Hectare": 0.67726316138130005
+            "Square Meter": 6772.6316138130005,
+            "Square Kilometer": 0.0067726316138130005,
+            "Square Mile": 0.002614913065917,
+            "Square Yard": 8099.99921187,
+            "Square Feet": 72900,
         };
 
         const unit_mapping = {
