--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -85,7 +85,7 @@
             "Paisa": 852.008765522,
             "Dam": 3408.03506209,
             "Acre": 1.673553718377,
-            "Hectare": 0.67726316138130005
+            "Hectare": 0.67726316138130005,
             "Square Meter": 6772.6316138130005,
             "Square Kilometer": 0.0067726316138130005,
             "Square Mile": 0.002614913065917,
