--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -73,7 +73,7 @@
 
         In the Ropani, Aana, Daam, Paisa system, 1 Ropani is equal to 16 Aana, 1 Aana equals 4 Daam, and 1 Daam equals 4 Paisa. Likewise, in the Bigaha, Kaththa, Dhur system, 1 Bigaha equals 20 Kaththa, 1 Kaththa equals 20 Dhur, and 1 Dhur equals 4 Kanawaa.
 
-        To know about the calculation method of the area of land, you can refer to the <a href="https://dos.gov.np/download/download/collection-of-laws-related-to-land-survey-and-measurement/downloads" target="_blank">official document</a>.</p>
+        To know about the calculation of the area of land, you can refer to the <a href="https://www.dos.gov.np/tools/unit" target="_blank">official document</a>.</p>
     </div>
 
     <div class="faq-item">
