--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Frequently Asked Questions (FAQ) about the Nepali Land Area Converter, including unit conversions and usage details.">
+    <meta name="keywords" content="Nepal land area conversion, Bigha to Kattha, Ropani to Aana, Nepali land measurement units">
+    <meta name="author" content="Your Name">
+    <meta name="question" content="What is the official land area conversion rate of Nepal?">
     <title>FAQ - Land Area Converter</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; padding: 20px; max-width: 800px; }
