--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Frequently Asked Questions (FAQ) about the Nepali Land Area Converter, including unit conversions and usage details.">
     <meta name="keywords" content="Nepal land area conversion, Bigha to Kattha, Ropani to Aana, Nepali land measurement units">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Krishna Niraula">
     <meta name="question" content="What is the official land area conversion rate of Nepal?">
     <title>FAQ - Land Area Converter</title>
     <style>
