--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                         <li><a href="apps/caputok/FAQ.html">FAQ~Caputok</a></li>
                         <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
                         <p>To get the app for free, click on the app icon below, or find it on Oppo App Market on Oppo Phone in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</p>
+			    <a href='https://caputok.en.uptodown.com/android' title='Download Caputok' >
+                <img src='https://stc.utdstc.com/img/mediakit/download-gio-big-w.png' alt='Download Caputok'>
+                </a>  
                     </ul>
                 </div>
             </div>
@@ -83,83 +86,9 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
     </div>
 </section>
 
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap');
-    .item {
-        min-width: 100px;
-        width: 100px;
-        position: relative;
-        vertical-align: top;
-        margin: 10px 10px 10px 0;
-        white-space: normal;
-        line-height: 1.2;
-    }
-    .item figure {
-        width: auto;
-        height: 100px;
-        margin: 0 0 10px;
-        text-align: center;
-        cursor: pointer;
-    }
-    .item figure img {
-        width: 100px;
-        height: auto;
-        border-radius: 5px;
-    }
-    .item div.name {
-        font-family: Roboto Slab, serif;
-        color: #333333;
-        font-size: 14px;
-        font-weight: 600;
-        word-break: break-word;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-align: center;
-    }
-    .item div.name a {
-        text-decoration: none;
-        color: inherit;
-        cursor: pointer;
-    }
-    .item div.description {
-        font-family: Roboto Slab, serif;
-        color: #999;
-        font-size: 12px;
-        font-weight: 300;
-        margin-top: 5px;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-align: center;
-    }
-</style>
-
-<div class="item">
-    <figure onclick="location.href='https://caputok.en.uptodown.com/android';">
-        <img 
-            width="100"
-            height="100"
-            alt="Caputok icon"
-            loading="lazy"
-            class="app_card_img"
-            src="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9"
-            srcset="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:100 1x, 
-                    https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:200 2x, 
-                    https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:300 3x">
-    </figure>
-    <div class="name">
-        <a href="https://caputok.en.uptodown.com/android" title="Download Caputok">Caputok</a>
-    </div>
-    <div class="description">Find who unfollowed you on TikTok</div>
-</div>
-
 
 	  
    
-  
 
 <section id="skills" class="skills">
 				<div class="skill-content">
