--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
                         <li><a href="apps/caputok/FAQ.html">FAQ~Caputok</a></li>
                         <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
-                        <p>To get the app for free, click on the app icon below, or find it on Oppo App Market on Oppo Phone in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</p>
+                        <p>To get the app for free, click on the link below, or find it on Oppo App Market on Oppo Phone in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</p>
 			    <a href='https://caputok.en.uptodown.com/android' title='Download Caputok' >
                 <img src='https://stc.utdstc.com/img/mediakit/download-gio-big-w.png' alt='Download Caputok'>
                 </a>  
