--- a/apps/caputok/FAQ.html
+++ b/apps/caputok/FAQ.html
@@ -58,6 +58,77 @@
 
     <h2>Why is this not in the Google Play Store or Apple App Store?</h2>
     <p>We plan to release it gradually in more regions and on more app stores soon.</p>
+
+<style>
+                    @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap');
+                    .item {
+                        min-width: 100px;
+                        width: 100px;
+                        position: relative;
+                        vertical-align: top;
+                        margin: 10px 10px 10px 0;
+                        white-space: normal;
+                        line-height: 1.2;
+                    }
+                    .item figure {
+                        width: auto;
+                        height: 100px;
+                        margin: 0 0 10px;
+                        text-align: center;
+                        cursor: pointer;
+                    }
+                    .item figure img {
+                        width: 100px;
+                        height: auto;
+                        border-radius: 5px;
+                    }
+                    .item div.name {
+                        font-family: Roboto slab, serif;
+                        color: #333333;
+                        font-size: 14px;
+                        font-weight: 600;
+                        word-break: break-word;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-align: center;
+                    }
+                    .item div.name a {
+                        text-decoration: none;
+                        color: inherit;
+                        cursor: pointer;
+                    }
+                    .item div.description {
+                        font-family: Roboto slab,serif;
+                        color: #999;
+                        font-size: 12px;
+                        font-weight: 300;
+                        margin-top: 5px;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-align: center;
+                    }
+        </style>
+                    <div class="item">
+                        <figure onclick="location.href='https://caputok.en.uptodown.com/android';">
+                            <img 
+                                width="100"
+                                height="100"
+                                alt="Caputok icon"
+                                loading="lazy"
+                                class="app_card_img"
+                                src="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9"
+                                srcset="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:100 1x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:200 2x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:300 3x">
+                    </figure>
+                    <div class="name">
+                        <a href="https://caputok.en.uptodown.com/android" title="Download Caputok">Caputok</a>
+                    </div>
+                    <div class="description">Find who unfollowed you on TikTok</div>
+                    </div>
 </body>
 </html>
+
 
