--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="dropdown-content">
                     <li class="dropdown">Caputok
                         <ul class="dropdown-content">
-                            <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">Play Store</a></li>
+                            <li><a href="https://caputok.en.uptodown.com/android">Play Store</a></li>
                             <li><a href="#">App Store</a></li>
                             <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
                             <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
