--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
      			   </div>
 		  
    
+  
 <section id="portfolio" class="portfolio">
     <div class="portfolio-content">
         <div class="section-heading text-center">
@@ -64,7 +65,9 @@
             <div class="portfolio-item">
                 <div class="portfolio-col portfolio-image">
                     <h3>Caputok (Find all TikTok non-followers in one place)</h3>
-                    <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
+                    <a href="https://caputok.en.uptodown.com/android" title="Download Caputok">
+                        <img src="assets/images/appstore.png" alt="Caputok App Screenshot">
+                    </a>
                 </div>
                 <div class="portfolio-col portfolio-description">
                     <p>Caputok is an innovative app designed to save you time and enable you to follow thousands of users on TikTok.
@@ -74,42 +77,18 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
                         <li><a href="apps/caputok/FAQ.html">FAQ~Caputok</a></li>
                         <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
+                        <p>To get the app for free, click on the link below, or find it on Oppo App Market on Oppo Phone in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</p>
+			    <a href='https://caputok.en.uptodown.com/android' title='Download Caputok' >
+                <img src='https://stc.utdstc.com/img/mediakit/download-gio-big-w.png' alt='Download Caputok'>
+                </a>  
                     </ul>
-                    <p>To get the app for free, click on the links below, or find it on Oppo App Market on Oppo Phone in India, Indonesia, Malaysia, Russia, Vietnam, Hong Kong (China), Philippines, and in Thailand. To get this app change 'phone region' to one of these and search 'Caputok' in Oppo App Market).</p>
-                    
-                    <!-- Bootstrap row for both widgets -->
-                    <div class="row">
-                        <!-- Existing Widget (Made Smaller) -->
-                        <div class="col-md-6 text-center">
-                            <a href="https://caputok.en.uptodown.com/android" title="Download Caputok">
-                                <img src="https://stc.utdstc.com/img/mediakit/download-gio-big-w.png" alt="Download Caputok" class="img-fluid" style="max-width: 80px; height: auto;">
-                            </a>
-                        </div>
-                        <!-- New Widget -->
-                        <div class="col-md-6 text-center">
-                            <div class="item">
-                                <figure onclick="location.href='https://caputok.en.uptodown.com/android';">
-                                    <img 
-                                        width="100"
-                                        height="100"
-                                        alt="Caputok icon"
-                                        loading="lazy"
-                                        class="app_card_img"
-                                        src="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9"
-                                        srcset="https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:100 1x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:200 2x, https://img.utdstc.com/icon/68e/51b/68e51b596f6e0604f7c7e1e4012d3eb912f6d6dffcab20e0ed67cb74d5b6bdf9:300 3x">
-                                </figure>
-                                <div class="name">
-                                    <a href="https://caputok.en.uptodown.com/android" title="Download Caputok">Caputok</a>
-                                </div>
-                                <div class="description">Find who unfollowed you on TikTok</div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
 	  
    
 
@@ -132,7 +111,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>70%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 									<div class="barWrapper">
 										<span class="progressText">field work</span>
 										<div class="single-progress-txt">
@@ -143,7 +122,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>85%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 									<div class="barWrapper">
 										<span class="progressText">documentation</span>
 										<div class="single-progress-txt">
@@ -165,7 +144,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>60%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 								</div>
 							</div>
 							<div class="col-md-6 ">
@@ -225,13 +204,13 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>20%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 
 								</div>
 							</div>
-						</div><!-- /.row -->
-					</div>	<!-- /.container -->		
-				</div><!-- /.skill-content-->
+						</div><
+					</div>		
+				</div>
 </section>	
 		 
 	  
