--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>65%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 									<div class="barWrapper">
 										<span class="progressText">Sketchup & 3D Rendering</span>
 										<div class="single-progress-txt">
@@ -162,7 +162,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>65%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 									<div class="barWrapper">
 										<span class="progressText">cad drawing</span>
 										<div class="single-progress-txt">
@@ -173,7 +173,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>35%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 									<div class="barWrapper">
 										<span class="progressText">communication</span>
 										<div class="single-progress-txt">
@@ -184,7 +184,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>70%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
+									</div>
 									<div class="barWrapper">
 										<span class="progressText"> creativity</span>
 										<div class="single-progress-txt">
@@ -195,8 +195,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 											</div>
 											<h3>60%</h3>	
 										</div>
-									</div><!-- /.barWrapper -->
-</div><!-- /.barWrapper -->
+									</div>
+</div>
 									<div class="barWrapper">
 										<span class="progressText">App Development</span>
 										<div class="single-progress-txt">
@@ -211,7 +211,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 
 								</div>
 							</div>
-						</div><
+						</div>
 					</div>		
 				</div>
 </section>	
